--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 
   <section id="about" class="section">
     <h1>Hello, I'm Sistla Gopi Krishna</h1>
-    <center><img src="gopi.JPG" alt="#" height="200px" width="200px" style="border-radius: 100px"></center>
+    <center><img src="gopi.JPG" alt="#" height="250px" width="220px" style="border-radius: 100px"></center>
+    <br>
     <p>  I am a computer science engineering graduate passionate about creating beautiful and functional web experiences.</p>
   </section>
 
@@ -32,8 +33,8 @@
     <h2>Skills</h2>
     <ul class="skills-list">
       <li>HTML</li>
-      <li>CSS</li>
-      <li>JavaScript</li>
+      <li>CSS </li>
+      <li>JavaScript </li>
       <li>SQL</li>
       <li>Python</li>
       <li>MS Office</li>
@@ -41,6 +42,7 @@
       <li>Oracle</li>
       <li>MySQL</li>
       <li>C programming</li>
+      <li>Git and Github</li>
     </ul>
   </section>
 
@@ -48,13 +50,13 @@
     <h2>Portfolio</h2>
     <div class="projects">
       <div class="project-card">
-        <h3>Project One</h3>
-        <p>A brief description of the project.</p>
+        <h3>Simple login form</h3>
+        <p>It is a simple login using python's tkinter and SQLite3. Here Sqlite3 is a file database which is simple to create and it can store data in tables and is reliable. whereas, Tkinter is a pyhton's inbuilt GUI framework that provides simple user interfaces.</p>
         <a href="#">View Project</a>
       </div>
       <div class="project-card">
-        <h3>Project Two</h3>
-        <p>Another brief description.</p>
+        <h3>Prediction of life in titanic accident.</h3>
+        <p>The project is a machine learning model implementation that uses titanic dataset of all persons onboard during titanic accident. It involves using ML model trained in backend using django and HTML, CSS, bootstrap in frontend. It provides faster prediction with good accuracy and uses web user interface for simplicity.</p>
         <a href="#">View Project</a>
       </div>
     </div>
