--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="projects">
       <div class="project-card">
         <h3>Simple login form</h3>
-        <p>It is a simple login using python's tkinter and SQLite3. Here Sqlite3 is a file database which is simple to create and it can store data in tables and is reliable. whereas, Tkinter is a pyhton's inbuilt GUI framework that provides simple user interfaces.</p>
+        <p>It is a simple login using python's tkinter and SQLite3. Here Sqlite3 is a file database which is simple to create and it can store data in tables and is reliable. whereas, Tkinter is a python's inbuilt GUI framework that provides simple user interfaces.</p>
         <a href="#">View Project</a>
       </div>
       <div class="project-card">
@@ -77,7 +77,7 @@
       <h3>Bachelor of Technology</h3>
       <h4>CMR Institute of Technology, Medchal, Hyderabad</h4>
       <p>2021-2025</p>
-      <p>Completed the bachelor's degree with 7.9 CGPA.</p>
+      <p>Completed the bachelor's degree with 7.82 CGPA.</p>
       <br>
     </div>
     <div class="education">
@@ -104,7 +104,7 @@
     <div class="social-links">
       <a href="https://in.linkedin.com/in/gopi-krishna-sistla-875745250">LinkedIn</a>
       <a href="https://github.com/Gopi-krish3">GitHub</a>
-      <a href="#">Download CV</a>
+      <a href="https://drive.google.com/file/d/1JXTS8YxxIfKX5Co-SdHCczB5BuY88aNi/view?usp=sharing">Download CV</a>
       <!--<a href="#">Twitter</a>-->
     </div>
   </section>
