--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
     <div class="education">
       <h3>SSC</h3>
       <h4>Keshava Reddy E-Learning School, Bachupally, Hyderabad</h4>
-      <p>2021-2025</p>
-      <p>Completed schooling with 10 CGPA from board of secondary education, Telangana.</p>
+      <p>2019</p>
+      <p>Completed schooling with 10/10 CGPA from board of secondary education, Telangana.</p>
       <br>
     </div>
   </section>
